--- a/style.css
+++ b/style.css
@@ -2,21 +2,33 @@ html {
   scroll-behavior: smooth;
 }
 
+@font-face {
+  font-family: 'meanwhile';
+  src: url(Din/DINLightAlternate.ttf);
+}
+
 body {
-  font-family: "Quicksand", sans-serif;
+  font-family: "meanwhile", sans-serif;
   margin: 0;
   padding: 100px;
+  font-size: 40px;
 }
 
 .section {
   height: 100vh;
+  padding: 5px;
 }
 
 #home {
-  background: #ffffff;
   background-image: url("img/meanwhile_logo.png");
   background-repeat: no-repeat;
   background-position: center center;
+}
+
+#contact {
+  border-bottom-color: lightgrey;
+  border-bottom-style: solid;
+  border-bottom-width: thin;
 }
 
 h1 {
@@ -28,31 +40,6 @@ p {
   padding-left: 30px;
   font-size: 22px;
   color: black;
-}
-
-#about {
-  background: #ffffff;
-  align-items: center;
-  padding-left: 100px;
-}
-
-#clients {
-  background: #ffffff;
-}
-
-#work {
-  background: #ffffff;
-}
-
-#contact {
-  background: #ffffff;
-}
-
-.section {
-  padding: 5px;
-  border-bottom-color: lightgrey;
-  border-bottom-style: solid;
-  border-bottom-width: thin;
 }
 
 .client-list {
@@ -115,5 +102,21 @@ p {
   text-align: left;
   color: gray;
   font-size: 15px;
-  background-color: #ffffff ;
+}
+
+.contact-list li {
+  list-style: none;
+  margin: 10px 30px;
+  display: inline-block;
+  padding: 20px;
+  padding-top: 200px;
+  text-align: center;
+}
+
+.logo {
+  display: inline;
+}
+
+ul {
+  padding-top: 50px;
 }
