--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ html, body {
 
 .form-inner form .pass-link a,
 .form-inner form .signup-link a {
-    color: #fa4299;
+    color: #5a91c0;
     text-decoration: none;
 }
 
